--- a/assets/sass/theme/_screen.scss
+++ b/assets/sass/theme/_screen.scss
@@ -394,7 +394,7 @@ header {
 	background: url('assets/images/page-bg.jpg') no-repeat scroll bottom / contain white;
 	overflow: hidden;
 	img {
-		padding: 15px;
+		padding: 25px 50px 50px;
 		box-sizing: border-box;
 	}
 	form {
