--- a/style.css
+++ b/style.css
@@ -2292,7 +2292,7 @@ header {
   background: url("assets/images/page-bg.jpg") no-repeat scroll bottom/contain white;
   overflow: hidden; }
   #mainContent img {
-    padding: 15px;
+    padding: 25px 50px 50px;
     box-sizing: border-box; }
   #mainContent form input, #mainContent form textarea {
     display: block;
