--- a/assets/sass/theme/_screen.scss
+++ b/assets/sass/theme/_screen.scss
@@ -88,6 +88,7 @@ header {
 	z-index: 9999;
 	height: 0;
 	overflow: hidden;
+	background: white;
 	box-shadow: rgba(0,0,0,0.25) 0px 0px 25px 1px;
 	@include backface-visibility(hidden);
 	@include transform(translateZ(0));
@@ -379,9 +380,10 @@ header {
 	}
 }
 #featureImage {
-	min-height: 50vh;
+	min-height: 100vh;
 	position: relative;
 	z-index: 9;
+	margin-top: -100px;
 }
 .aligncenter {
 	text-align: center;
